--- a/index.html
+++ b/index.html
@@ -22,12 +22,19 @@
             <ul>
                 <li class="lista1">
                     <a href="https://calendar.app.google/mrGXxeemLNt3Lvyr5">Agendar Horários</a></li>
+
                 <li class="lista2">
                     <a href="https://maps.app.goo.gl/4EbdonpsjXzMa1t9A" target="_blank">Localização</a>
                     </li>
+
                 <li class="lista3">
-                    <a href="">Galeria</a></li>
-                <li class="lista4"><a href="">Contato</a></li>
+                    <a href="galeria.html">Galeria</a></li>
+
+                <li class="lista4"><a href="https://wa.me/c/556796424871">Tabela de Serviços</a></li>
+
+                <li class="lista5">
+                    <a href="https://api.whatsapp.com/send?phone=5567996424871&text=Ol%C3%A1,%20tenho%20uma%20d%C3%BAvida,%20gostaria%20de%20falar%20com%20um%20atendente!">Atendimento</a>
+                </li>
             </ul>
         </div>
 
