--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div id="social-links" class="social-1">
 
-            <a class="social1" href="https://api.whatsapp.com/send?phone=5567999986563" target="_blank">
+            <a class="social1" href="#" target="_blank">
                 <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
     
