--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <img src="assets/logo.jpg" alt="Logo da Barbearia">
         </div>
         <div class="title">
-            <h1>Scott Barbearia</h1>
+            <h1>Barbearia do Scott</h1>
+            <p>Av. Irineu de Souza Araújo, 2113</p>
         </div>
 
         <div class="Listas">
@@ -56,7 +57,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
         <footer>
-
+            <p>Nova Alvorada do Sul, MS</p>
         </footer>
 
     </div>
