--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="title">
             <h1>Barbearia do Scott</h1>
             <p>Av. Irineu de Souza Araújo, 2113</p>
+            <p class="cidade">Nova Alvorada do Sul,MS</p>
         </div>
 
         <div class="Listas">
@@ -55,11 +56,6 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script type="module" src="script.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-
-        <footer>
-            <p>Nova Alvorada do Sul, MS</p>
-        </footer>
-
     </div>
     
 </body>
