--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <div class="Listas">
             <ul>
                 <li class="lista1">
-                    <a href="https://calendar.app.google/4x2z7GBCcmvkdLXf9">Agendar Horários</a></li>
+                    <a href="https://calendar.app.google/4x2z7GBCcmvkdLXf9"><ion-icon name="cut-outline" class="icons"></ion-icon>Agendar Horários</a></li>
 
                 <li class="lista2">
-                    <a href="https://maps.app.goo.gl/4EbdonpsjXzMa1t9A" target="_blank">Localização</a>
+                    <a href="https://maps.app.goo.gl/4EbdonpsjXzMa1t9A" target="_blank"><ion-icon name="location-outline" class="icons"></ion-icon>Localização</a>
                     </li>
 
                 <li class="lista3">
-                    <a href="galeria.html">Galeria</a></li>
+                    <a href="galeria.html"><ion-icon name="images-outline" class="icons"></ion-icon>Galeria</a></li>
 
-                <li class="lista4"><a href="https://wa.me/c/556796424871">Tabela de Serviços</a></li>
+                <li class="lista4"><a href="https://wa.me/c/556796424871"><ion-icon name="list-outline" class="icons"></ion-icon>Tabela de Serviços</a></li>
 
                 <li class="lista5">
-                    <a href="https://api.whatsapp.com/send?phone=5567996424871&text=Ol%C3%A1,%20tenho%20uma%20d%C3%BAvida,%20gostaria%20de%20falar%20com%20um%20atendente!">Atendimento</a>
+                    <a href="https://api.whatsapp.com/send?phone=5567996424871&text=Ol%C3%A1,%20tenho%20uma%20d%C3%BAvida,%20gostaria%20de%20falar%20com%20um%20atendente!"><ion-icon name="push-outline" class="icons"></ion-icon>Atendimento</a>
                 </li>
             </ul>
         </div>
