--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div id="social-links" class="social-1">
 
-            <a class="social1" href="#" target="_blank">
+            <a class="social1" href="https://api.whatsapp.com/message/SJ6NT2GWCST3A1?autoload=1&app_absent=0" target="_blank">
                 <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
     
