--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="title">
             <h1>Barbearia do Scott</h1>
             <p>Av. Irineu de Souza Araújo, 2113</p>
-            <p class="cidade">Nova Alvorada do Sul,MS</p>
+            <p class="cidade">Nova Alvorada do Sul-MS</p>
         </div>
 
         <div class="Listas">
@@ -44,11 +44,11 @@
         <div id="social-links" class="social-1">
 
             <a class="social1" href="https://api.whatsapp.com/message/SJ6NT2GWCST3A1?autoload=1&app_absent=0" target="_blank">
-                <ion-icon name="logo-whatsapp"></ion-icon>
+                <ion-icon name="logo-whatsapp"></ion-icon>6799642-4871
             </a>
     
             <a class="social2" href="https://www.instagram.com/barbeariadoscott/" target="_blank">
-                <ion-icon name="logo-instagram"></ion-icon>
+                <ion-icon name="logo-instagram"></ion-icon>@barbeariadoscott
             </a>  
     
         </div>
