--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="social-links" class="social-1">
 
             <a class="social1" href="https://api.whatsapp.com/message/SJ6NT2GWCST3A1?autoload=1&app_absent=0" target="_blank">
-                <ion-icon name="logo-whatsapp"></ion-icon>6799642-4871
+                <ion-icon name="logo-whatsapp"></ion-icon>(67) 99642-4871
             </a>
     
             <a class="social2" href="https://www.instagram.com/barbeariadoscott/" target="_blank">
